# cookaid

./: README.md
app/: icon.svg.import  project.godot  slashscreen.gd  slashscreen.tscn
app/assets/icons/: delete.svg.import  edit.svg.import  save.svg.import
app/components/bottom_bar/: bottom_bar.gd  bottom_bar.tscn
app/components/ingredient/: ingredient.gd  ingredient.tscn
app/components/input/: input.gd  input.tscn
app/components/multi_line_input/: multi_line_input.gd  multi_line_input.tscn
app/components/step_popup/: step_popup.gd  step_popup.tscn  step_value.gd
app/components/text_popup/: text_popup.gd  text_popup.tscn
app/components/top_bar/: top_bar.gd  top_bar.tscn
app/primitives/: button.tscn
app/screens/edit_recipe/: edit_recipe.gd  edit_recipe.tscn
app/screens/login/: loginscreen.gd  loginscreen.tscn
app/screens/new_recipe/: new-recipe.tscn
app/screens/recipes/: recipes.gd  recipes.tscn
app/screens/register/: registerscreen.gd  registerscreen.tscn
app/singletons/: config.gd  navigator.gd  state.gd  token_manager.gd  variables.gd
app/views/base/: base.gd  base.tscn
app/views/login/: login.gd  login.tscn
app/views/splash/: splash.gd  splash.tscn
docker/: docker-compose.yaml
server/: Cargo.toml  ExampleConfig.toml
server/src/: constants.rs  database.rs  main.rs
server/src/routes/: check_session.rs  encryption_token.rs  ingredient.rs  login.rs  mod.rs  recipe.rs  register.rs  user.rs
server/src/routes/step/: create.rs  mod.rs  step.rs  step_request.rs  step_type.rs
server/src/utils/: hash_password.rs  mod.rs
(+12 files in other folders)
