[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = "0.7.5"
bson = "2.10.0"
config = { version = "0.14.0", features = ["toml"] }
env_logger = "0.11.3"
log = "0.4.21"
mongodb = "2.8.2"
rust-argon2 = "2.1.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
